--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     </head>
     <body>
         <h1>gh-pagesブランチはGithub Pagesに公開されます。</h1>
+        <p>この変更はmasterブランチで行われました。</p>
     </body>
 </html>
